<resources>
    <string name="app_name">Sugar Beet Monitor</string>
    <string name="action_settings">Settings</string>

    <!-- Titles -->
    <string name="title_preview">Image Preview</string>

    <!-- Button Text -->
    <string name="button_save">Save</string>
    <string name="button_discard">Discard</string>
    <string name="button_grant_permission">Grant Permission</string>
    <string name="button_back">Back</string>
    <string name="button_retry">Retry</string>

    <!-- Image Content Descriptions-->
    <string name="content_description_preview">Preview of the taken picture</string>
    <string name="content_description_main_fab">Take a picture</string>
    <string name="content_description_list_item">Image</string>
    <string name="content_description_status_icon">Status icon</string>

    <!-- Info Text -->
    <string name="text_camera_permission">To use this feature you need to grant the application the
        permission to use your camera.</string>
    <string name="text_landing_page">Welcome to Sugar Beet Monitor! \n Tap the %icon% camera button
        and take a picture of your sugar beet to begin analysis.</string>

    <!-- List Item -->
    <string name="list_item_status">Status:</string>
    <string name="list_item_complete">Complete</string>
    <string name="list_item_error">Error</string>
    <string name="list_item_awaiting">Awaiting Response</string>
    <string name="list_item_prediction_empty"> - </string>
    <string name="list_item_prediction">%1$.1f%%</string>

    <!-- Menu Actions -->
    <string name="action_delete">Delete</string>

    <!--Alert Dialogs -->
    <string name="alert_message_delete">Are you sure you want to delete this image?</string>
    <string name="alert_title_delete">Confirm Delete</string>
    <string name="alert_cancel">Cancel</string>
    <string name="alert_positive_delete">Delete</string>
</resources>