<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CameraActivity">

    <LinearLayout
        android:id="@+id/layout_permission_buttons"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:id="@+id/text_grant_permission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_camera_permission"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:padding="20dp" />

        <Button
            android:id="@+id/button_grant_permission"
            style="@style/FilledButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/button_grant_permission" />

        <Button
            android:id="@+id/button_permission_back"
            style="@style/OutlinedButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/button_back" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>